fix extra space on right of lookbook

--- a/css/creative.css
+++ b/css/creative.css
@@ -1386,6 +1386,10 @@ width: 60%;
   transition: .5s ease;
 }
 
+.lookbook-container {
+  overflow-x: hidden;
+}
+
 .lookbook h2 {
   font-size: 4em !important;
   font-weight: 900;
@@ -1741,7 +1745,7 @@ width: 60%;
 /*PDP*/
 #page-top {
   z-index: -1;
-  overflow-x:hidden;
+  /*overflow-x:hidden;*/
 }
 
 .pdp-container {
